Add settings to warn when pasting text too large or with a new line character
Before sending calling the `HandleClipboardData` member function on
the `PasteFromClipboardEventArgs` object when we receive a request
from the `TermControl` to send it the clipboard's text content, we
now display a warning to let the user choose whether to continue or
not if the text is larger than 5 KiB or contains the _new line_
character, which can be a security issue if the user is pasting the
text in a shell.

These warnings can be disabled with the `largePasteWarning` and
`multiLinePasteWarning` global settings respectively.

I merged `TerminalPage::_PasteFromClipboardHandler` and
`TerminalPage::_PasteFromClipboardHandler` because I think that
the code is simpler this way.

--- a/src/cascadia/TerminalApp/TerminalPage.xaml
+++ b/src/cascadia/TerminalApp/TerminalPage.xaml
@@ -53,5 +53,23 @@ the MIT License. See LICENSE in the project root for license information. -->
             DefaultButton="Primary"
             PrimaryButtonClick="_CloseWarningPrimaryButtonOnClick">
         </ContentDialog>
+
+        <ContentDialog
+            x:Load="False"
+            x:Name="MultiLinePasteDialog"
+            x:Uid="MultiLinePasteDialog"
+            DefaultButton="Primary"
+            PrimaryButtonClick="_AcceptPasteButtonOnClick"
+            CloseButtonClick="_RejectPasteButtonOnClick">
+        </ContentDialog>
+
+        <ContentDialog
+            x:Load="False"
+            x:Name="LargePasteDialog"
+            x:Uid="LargePasteDialog"
+            DefaultButton="Primary"
+            PrimaryButtonClick="_AcceptPasteButtonOnClick"
+            CloseButtonClick="_RejectPasteButtonOnClick">
+        </ContentDialog>
     </Grid>
 </Page>
